# stm32-cmake

./: Getting-Started.md
cmake/: FindCMSIS.cmake  FindFreeRTOS.cmake  FindHAL.cmake  git_submodule.cmake  info.cmake  print_target_properties.cmake  stm32.cmake  stm32_gcc.cmake
cmake/stm32/: common.cmake  f0.cmake  f1.cmake  f2.cmake  f3.cmake  f4.cmake  f7.cmake  g0.cmake  g4.cmake  h7.cmake  l0.cmake  l1.cmake  l4.cmake  l5.cmake  openocd_cfg.cmake  utilities.cmake
examples/blinky/: CMakeLists.txt  blinky.c  blinky.cpp  stm32f1xx_hal_conf.h  stm32f4xx_hal_conf.h  stm32h7xx_hal_conf.h  stm32l0xx_hal_conf.h
examples/blinky-ll/: CMakeLists.txt
examples/custom-linker-script/: CMakeLists.txt
examples/fetch-cmsis-hal/: CMakeLists.txt
examples/fetch-cube/: CMakeLists.txt
examples/freertos/: CMakeLists.txt  Priorities.h  main.c  main.cpp
examples/multi-core/: CMakeLists.txt
examples/template/: CMakeLists.txt
tests/bsp/: CMakeLists.txt
tests/cmsis/: CMakeLists.txt
tests/fetch/: CMakeLists.txt
tests/hal/: CMakeLists.txt
